cmake_minimum_required(VERSION 2.8)

project(Tseerapi)

set(CMAKE_CXX_FLAGS "-std=c++11 -O2 -Wall -Wno-deprecated")

set(TSEERAPI_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})

set(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_SOURCE_DIR})

set(LIB-TGZ "${PROJECT_BINARY_DIR}/Tseerapi.tgz")

#´ò°ü½Å±¾
SET(RUN_DEPLOY_COMMAND_FILE "${PROJECT_BINARY_DIR}/run-deploy-lib.cmake")
FILE(WRITE ${RUN_DEPLOY_COMMAND_FILE} "#deploy lib-tar\n")
FILE(APPEND ${RUN_DEPLOY_COMMAND_FILE} "EXECUTE_PROCESS(\n")
FILE(APPEND ${RUN_DEPLOY_COMMAND_FILE} "WORKING_DIRECTORY ${PROJECT_BINARY_DIR}\n")
FILE(APPEND ${RUN_DEPLOY_COMMAND_FILE} "COMMAND cp ${TSEERAPI_ROOT_DIR}/src/Tseer_api.h lib\n")
FILE(APPEND ${RUN_DEPLOY_COMMAND_FILE} "COMMAND cp ${TSEERAPI_ROOT_DIR}/src/Tseer_comm.h lib\n")
FILE(APPEND ${RUN_DEPLOY_COMMAND_FILE} "COMMAND tar czfv  ${LIB-TGZ} lib\n")
FILE(APPEND ${RUN_DEPLOY_COMMAND_FILE} ")\n")

add_custom_command(OUTPUT ${LIB-TGZ}
		WORKING_DIRECTORY ${PROJECT_BINARY_DIR}
		COMMAND ${CMAKE_COMMAND} -P ${RUN_DEPLOY_COMMAND_FILE}
		COMMENT "call ${RUN_DEPLOY_COMMAND_FILE}")
		
add_custom_target(apitar
        DEPENDS tseerapi ${LIB-TGZ})

add_subdirectory(src)
add_subdirectory(test)

install (FILES ${TSEERAPI_ROOT_DIR}/src/Tseer_api.h DESTINATION ${PROJECT_BINARY_DIR}/${PROJECT_NAME}/lib)
install (FILES ${TSEERAPI_ROOT_DIR}/src/Tseer_comm.h DESTINATION ${PROJECT_BINARY_DIR}/${PROJECT_NAME}/lib)
